# MyDigikam

./: .clazy  .codespell  .cppcheck  .gitattributes  .gitignore  .gitlab-ci.yml  .kde-ci.yml  .krazy  .scan-build  AUTHORS  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  Mainpage.dox  Messages.sh  NEWS  PACKAGING  README.md  bootstrap.api  bootstrap.homebrew  bootstrap.linux  bootstrap.local  bootstrap.macports  bootstrap.tarball  bootstrap.vcpkg
core/data/dnnmodels/: CMakeLists.txt  README  README-DIOAD  README-EfficientNetB7  README-YOLOv11  dnnmodels.conf
core/libs/aitoolspipeline/: CMakeLists.txt  aitoolspipeline.cpp  aitoolspipeline.h  aitoolspipelinepackage.cpp  aitoolspipelinepackage.h
core/libs/autorotator/: CMakeLists.txt  autorotator.cpp  autorotator.h
core/libs/dnnmodelmanager/: CMakeLists.txt  dnnmodelbase.cpp  dnnmodelbase.h  dnnmodelconfig.cpp  dnnmodelconfig.h  dnnmodeldefinitions.h  dnnmodelinfocontainer.cpp  dnnmodelinfocontainer.h  dnnmodelmanager.cpp  dnnmodelmanager.h  dnnmodelnet.cpp  dnnmodelnet.h  dnnmodelsface.cpp  dnnmodelsface.h  dnnmodelyunet.cpp  dnnmodelyunet.h
core/libs/facesengine/: CMakeLists.txt
core/libs/facesengine/common/: identity.cpp  identity.h
core/libs/facesengine/detection/: facedetector.cpp  facedetector.h
core/libs/facesengine/detection/opencv-dnn/: dnnfacedetectorbase.cpp  dnnfacedetectorbase.h  dnnfacedetectorssd.cpp  dnnfacedetectorssd.h  dnnfacedetectoryolo.cpp  dnnfacedetectoryolo.h  dnnfacedetectoryunet.cpp  dnnfacedetectoryunet.h  opencvdnnfacedetector.cpp  opencvdnnfacedetector.h
core/libs/facesengine/facedb/: facedb.cpp  facedb.h  facedb_dnn.cpp  facedb_dnn_spatial.cpp  facedb_identity.cpp  facedb_p.h  facedbaccess.cpp  facedbaccess.h  facedbbackend.cpp  facedbbackend.h  facedboperationgroup.cpp  facedboperationgroup.h  facedbschemaupdater.cpp  facedbschemaupdater.h  facescansettings.cpp  facescansettings.h
core/libs/facesengine/preprocessing/: facepreprocessor.h
core/libs/facesengine/preprocessing/recognition/: openfacepreprocessor.cpp  openfacepreprocessor.h  recognitionpreprocessor.cpp  recognitionpreprocessor.h
core/libs/facesengine/preprocessing/shape-predictor/: fullobjectdetection.cpp  fullobjectdetection.h  matrixoperations.cpp  matrixoperations.h  pointtransformaffine.cpp  pointtransformaffine.h  qdatastreamoverloads.cpp  qdatastreamoverloads.h  shapepredictor.cpp  shapepredictor.h  vectoroperations.h
core/libs/facesengine/recognition/: dataproviders.cpp  dataproviders.h  faceclassifier.cpp  faceclassifier.h  faceclassifierbase.cpp  faceclassifierbase.h  facialrecognition_wrapper.cpp  facialrecognition_wrapper.h  facialrecognition_wrapper_identity.cpp  facialrecognition_wrapper_p.cpp  facialrecognition_wrapper_p.h  facialrecognition_wrapper_recognize.cpp  facialrecognition_wrapper_setup.cpp  facialrecognition_wrapper_training.cpp  identityprovider.cpp  identityprovider.h  recognitiontrainingprovider.cpp  recognitiontrainingprovider.h  recognitiontrainingupdatequeue.cpp  recognitiontrainingupdatequeue.h
core/libs/facesengine/recognition/opencv-dnn/: dnnfaceextractorbase.cpp  dnnfaceextractorbase.h  dnnopenfaceextractor.cpp  dnnopenfaceextractor.h  dnnsfaceextractor.cpp  dnnsfaceextractor.h  kd_nodebase.cpp  kd_nodebase.h  kd_nodeopenface.cpp  kd_nodeopenface.h  kd_nodesface.cpp  kd_nodesface.h  kd_treebase.cpp  kd_treebase.h  kd_treeopenface.cpp  kd_treeopenface.h  kd_treesface.cpp  kd_treesface.h  opencvdnnfacerecognizer.cpp  opencvdnnfacerecognizer.h  opencvdnnfacerecognizer_p.h
core/libs/facesengine/widgets/: facescansettings.cpp  facescansettings.h  facescanwidget.cpp  facescanwidget.h  facescanwidget_p.h
core/libs/mlfoundation/: CMakeLists.txt  mlclassifierfoundation.cpp  mlclassifierfoundation.h  mlpipelinefoundation.cpp  mlpipelinefoundation.h  mlpipelinemacros.h  mlpipelinepackagefoundation.h  mlpipelinepackagenotify.cpp  mlpipelinepackagenotify.h  ocvocldnnsetter.cpp  ocvocldnnsetter.h  sharedqueue.h
core/libs/qtopencvimg/: CMakeLists.txt  qtopencvimg.cpp  qtopencvimg.h
core/tests/multithreading/: CMakeLists.txt  actionjob_utest.cpp  main.cpp  processordlg.cpp  processordlg.h  rawtopngconverterthread.cpp  rawtopngconverterthread.h
core/utilities/facemanagement/: CMakeLists.txt
core/utilities/facemanagement/backgroundprocesses/: facebackgroundrecognition.cpp  facebackgroundrecognition.h
core/utilities/facemanagement/bench/: detectionbenchmarker.cpp  detectionbenchmarker.h  recognitionbenchmarker.cpp  recognitionbenchmarker.h
core/utilities/facemanagement/database/: faceitemretriever.cpp  faceitemretriever.h  facescansettings.h  faceutils.cpp  faceutils.h
core/utilities/facemanagement/dialogs/: facetrainingupgradedlg.cpp  facetrainingupgradedlg.h  recognitionmodelchange.cpp  recognitionmodelchange.h
core/utilities/facemanagement/items/: facegroup.cpp  facegroup.h  facegroup_p.cpp  facegroup_p.h  faceitem.cpp  faceitem.h
core/utilities/facemanagement/pipelines/: facepipelinebase.cpp  facepipelinebase.h  facepipelinepackagebase.cpp  facepipelinepackagebase.h
core/utilities/facemanagement/pipelines/detect/: facepipelinedetect.cpp  (+1 more)
core/utilities/facemanagement/threads/: facepipeline.cpp  facepipeline.h  facepipeline_p.cpp  facepipeline_p.h  facepipelinepackage.cpp  facepipelinepackage.h  facepreviewloader.cpp  facepreviewloader.h  parallelpipes.cpp  scanstatefilter.cpp
core/utilities/facemanagement/widgets/: assignnamewidget.cpp  assignnamewidget.h  assignnamewidget_p.cpp  assignnamewidget_p.h  assignnamewidgetstates.cpp  assignnamewidgetstates.h  facescanwidget.cpp  facescanwidget.h  facescanwidget_p.h
core/utilities/facemanagement/workers/: databasewriter.cpp  databasewriter.h  detectionworker.cpp  detectionworker.h  recognitionworker.cpp  recognitionworker.h  trainerworker.cpp  trainerworker.h
core/utilities/survey/: CMakeLists.txt  surveystack.cpp  surveystack.h  surveyview.cpp  surveyview.h  surveywindow.cpp  surveywindow.h  surveywindow_config.cpp  surveywindow_import.cpp  surveywindow_p.h  surveywindow_setup.cpp  surveywindow_tools.cpp  surveywindowui5.rc
(+5866 files in other folders)
